Add 2 more recipes fix typo create relative link
Create relative link between homepage and recipes page

--- a/recipes/good-old-fashioned-pancakes.html
+++ b/recipes/good-old-fashioned-pancakes.html
@@ -47,6 +47,7 @@
             and cook
             until browned on the other side. Repeat with remaining batter.</li>
     </ol>
+    <a href="../index.html">Back to homepage</a>
 </body>
 
 </html>
