--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/good-old-fashioned-pancakes.html">Good Old-Fashioned
-        Pancakes</a>
+    <ul>
+        <li><a href="./recipes/good-old-fashioned-pancakes.html">Good
+                Old-Fashioned
+                Pancakes</a></li>
+        <li><a href="./recipes/baked-potato-soup.html">Baked Potato Soup</a>
+        </li>
+        <li><a href="./recipes/juicy-roasted-chicken.html">Juicy Roasted
+                Chicken</a></li>
+    </ul>
 </body>
 
 </html>
